# uv-ntp-client

./: CMakeLists.txt  README.md  binary_fmt.h  example.c  main.c  packet.h  packet.txt  uv-ntp-client.c  uv-ntp-client.h
libs/: CMakeLists.txt
